tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_line_plot_filling_between_series.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListLinePlot[{{1, 3, 2, 4}, {3, 4, 3, 5}}, Filling -> {1 -> {2}}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polygon opacity="0.2" fill="#5E81B5" points="351,1927 1360,1049 2368,1488 3377,610 3377,171 2368,1049 1360,610 351,1049 "/>
<polyline fill="none" opacity="1" stroke="#5E81B5" stroke-width="15" points="351,1927 1360,1049 2368,1488 3377,610 "/>
<polyline fill="none" opacity="1" stroke="#E0932C" stroke-width="15" points="351,1049 1360,610 2368,1049 3377,171 "/>
<line x1="230.0" y1="1998.0" x2="3500.0" y2="1998.0" stroke="#666" stroke-width="10"/>
<line x1="553.0" y1="1998.0" x2="553.0" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="754.8" y1="1998.0" x2="754.8" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="956.7" y1="1998.0" x2="956.7" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="1158.5" y1="1998.0" x2="1158.5" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="1562.2" y1="1998.0" x2="1562.2" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="1764.1" y1="1998.0" x2="1764.1" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="1965.9" y1="1998.0" x2="1965.9" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="2167.8" y1="1998.0" x2="2167.8" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="2571.5" y1="1998.0" x2="2571.5" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="2773.3" y1="1998.0" x2="2773.3" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="2975.2" y1="1998.0" x2="2975.2" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="3177.0" y1="1998.0" x2="3177.0" y2="1974.0" stroke="#666" stroke-width="10"/>
<line x1="351.1" y1="1998.0" x2="351.1" y2="1958.0" stroke="#666" stroke-width="10"/>
<text x="351.1" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="1360.4" y1="1998.0" x2="1360.4" y2="1958.0" stroke="#666" stroke-width="10"/>
<text x="1360.4" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2369.6" y1="1998.0" x2="2369.6" y2="1958.0" stroke="#666" stroke-width="10"/>
<text x="2369.6" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="3378.9" y1="1998.0" x2="3378.9" y2="1958.0" stroke="#666" stroke-width="10"/>
<text x="3378.9" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.0" y1="100.0" x2="230.0" y2="1998.0" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1839.8" x2="254.0" y2="1839.8" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1752.0" x2="254.0" y2="1752.0" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1664.1" x2="254.0" y2="1664.1" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1576.2" x2="254.0" y2="1576.2" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1400.5" x2="254.0" y2="1400.5" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1312.6" x2="254.0" y2="1312.6" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1224.7" x2="254.0" y2="1224.7" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1136.9" x2="254.0" y2="1136.9" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="961.1" x2="254.0" y2="961.1" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="873.3" x2="254.0" y2="873.3" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="785.4" x2="254.0" y2="785.4" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="697.5" x2="254.0" y2="697.5" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="521.8" x2="254.0" y2="521.8" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="433.9" x2="254.0" y2="433.9" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="346.0" x2="254.0" y2="346.0" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="258.2" x2="254.0" y2="258.2" stroke="#666" stroke-width="10"/>
<line x1="230.0" y1="1927.7" x2="270.0" y2="1927.7" stroke="#666" stroke-width="10"/>
<text x="182.8" y="1964.5" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="230.0" y1="1488.4" x2="270.0" y2="1488.4" stroke="#666" stroke-width="10"/>
<text x="182.8" y="1525.1" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="230.0" y1="1049.0" x2="270.0" y2="1049.0" stroke="#666" stroke-width="10"/>
<text x="182.8" y="1085.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="230.0" y1="609.6" x2="270.0" y2="609.6" stroke="#666" stroke-width="10"/>
<text x="182.8" y="646.4" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.0" y1="170.3" x2="270.0" y2="170.3" stroke="#666" stroke-width="10"/>
<text x="182.8" y="207.0" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">5</text>
</svg>
